--- a/internal/server/http/test/testdata/imposters/test_request.imp.yaml
+++ b/internal/server/http/test/testdata/imposters/test_request.imp.yaml
@@ -2,6 +2,6 @@
 - request:
     method: GET
     endpoint: /yamlTestRequest
-  response:
-    status: 200
-    body: "Yaml Handled"
+  responses:
+    - status: 200
+      body: "Yaml Handled"
